changed icons + overflow fix

--- a/app.json
+++ b/app.json
@@ -22,10 +22,11 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive_icon.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "versionCode": 1
+      "versionCode": 1,
+      "package": "com.muduxd.FoodTracker"
     },
     "web": {
       "favicon": "./assets/favicon.png"
